--- a/GradeCalc/GradeCalc.csproj
+++ b/GradeCalc/GradeCalc.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Grade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validator.cs" />
     <EmbeddedResource Include="frmEnterGrades.resx">
       <DependentUpon>frmEnterGrades.cs</DependentUpon>
     </EmbeddedResource>
