--- a/GradeCalc/GradeCalc.csproj
+++ b/GradeCalc/GradeCalc.csproj
@@ -98,7 +98,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="StudGradesDB.txt" />
+    <Content Include="StudGradesDB.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
